[project]
name = "glotter2"
version = "0.10.0"
description = "An execution library for scripts written in any language. This is a fork of https://github.com/auroq/glotter"
authors = [
    {name = "auroq"}, 
    {name = "rzuckerm"}
]
readme = "README.md"
license = "LICENSE.txt"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python=">=3.9,<4.0"
dependencies = [
    "docker (>=7.1.0,<8.0)",
    "jinja2 (>=3.1.2,<4.0)",
    "pytest (>=8.3.5,<9.0)",
    "pyyaml (>6.0,<7.0)",
    "pytest-xdist (>=3.6.1,<4.0)",
    "black (>=24.10.0,<25.0)",
    "pydantic (>=1.10.6,<2.0)"
]

[project.urls]
"Bug Tracker" = "https://github.com/rzuckerm/glotter2/issues"
"Changelog" = "https://github.com/rzuckerm/glotter2#changelog"
homepage = "https://github.com/rzuckerm/glotter2"
documentation = "https://rzuckerm.github.io/glotter2"

[project.scripts]
glotter = "glotter.__main__:main"

[tool.poetry]
packages = [{include="glotter"}]

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.0"
coverage-badge = "^1.1.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.message]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "too-few-public-methods",
    "no-else-return",
    "too-many-arguments"
]

[tool.pylint.basic]
good-names = [
    "e", "f", "k", "v", "n",
    "hyphen", "underscore", "camel", "pascal", "lower", "upper", "two_letter_limit"
]
