[project]
name = "glotter2"
version = "0.12.0"
description = "An execution library for scripts written in any language. This is a fork of https://github.com/auroq/glotter"
authors = [
    { name = "auroq" },
    { name = "rzuckerm" },
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "docker>=7.1.0,<8.0",
    "jinja2>=3.1.2,<4.0",
    "pytest>=8.3.5,<9.0",
    "pyyaml>6.0,<7.0",
    "pytest-xdist>=3.6.1,<4.0",
    "pydantic>=2.11.9,<3.0",
    "pydantic-core>=2.33.2,<3.0.0",
    "ruff>=0.13.2,<0.14.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/rzuckerm/glotter2/issues"
Changelog = "https://github.com/rzuckerm/glotter2#changelog"
homepage = "https://github.com/rzuckerm/glotter2"
documentation = "https://rzuckerm.github.io/glotter2"

[project.scripts]
glotter = "glotter.__main__:main"

[dependency-groups]
dev = [
    "pytest-cov>=4.0.0,<5",
    "coverage>=7.2.0,<8",
    "coverage-badge>=1.1.0,<2",
    "sphinx>=6.1.3,<7",
    "sphinx-rtd-theme>=1.2.0,<2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "glotter"
module-root = ""

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "RUF", "T10", "W"]
ignore = ["E501", "PLR2004", "PLW1641", "RUF005", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["PLR0913"]
